--- a/WolvenKit/Views/Shell/DockingAdapter.xaml
+++ b/WolvenKit/Views/Shell/DockingAdapter.xaml
@@ -48,12 +48,12 @@
         <syncfusion:DockingManager
             x:Name="PART_DockingManager"
             ActiveWindowChanged="PART_DockingManager_ActiveWindowChanged_1"
-            Background="Transparent"
             DocumentCloseButtonType="Both"
             CloseTabOnMiddleClick="True"
             DraggingType="NormalDragging"
             AllowDrop="True"
             IsTDIDragDropEnabled="True"
+            AllowProportionalResize="True"
             PersistState="True"
             UseNativeFloatWindow="False"
             UseDocumentContainer="True"
@@ -68,13 +68,13 @@
                     <Setter Property="RestoreButtonTemplate" Value="{StaticResource WolvenKitButtonsTemplate}" />
                     <Setter Property="MenuButtonTemplate" Value="{StaticResource WolvenKitButtonsTemplate}" />
                     <Setter Property="AwlButtonTemplate" Value="{StaticResource WolvenKitButtonsTemplate}" />
-                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="Background" Value="{StaticResource CloudDrawingBrushMain}" />
                     <Setter Property="TabItemsBackground" Value="{StaticResource ContentBackgroundAlt2}" />
                     <Setter Property="TabItemBackgroundSelected" Value="#373737" />
-                    <Setter Property="ElementBorderThickness" Value="1,1,1,1" />
-                    <Setter Property="TabPanelBackground" Value="#373737" />
-                    <Setter Property="TabPanelBorderThickness" Value="1" />
-                    <Setter Property="TabPanelBorderBrush" Value="{StaticResource BorderAlt}" />
+                    <Setter Property="ElementBorderThickness" Value="1" />
+                    <Setter Property="TabPanelBackground" Value="{StaticResource ContentBackground}" />
+                    <Setter Property="TabPanelBorderThickness" Value="0,0,0,0" />
+                    <Setter Property="TabPanelBorderBrush" Value="{StaticResource ContentBackground}" />
                     <Setter Property="TabItemsForeground" Value="#ffffff" />
                     <Setter Property="TabItemForegroundSelected" Value="#ffffff" />
                     <Setter Property="HeaderBackground" Value="{StaticResource ContentBackgroundAlt2}" />
@@ -82,45 +82,65 @@
                     <Setter Property="HeaderForeground" Value="#ffffff" />
                     <Setter Property="HeaderForegroundSelected" Value="#ffffff" />
                     <Setter Property="HeaderMouseOverBackground" Value="#1f1f1f" />
-                    <Setter Property="HeaderBorderThickness" Value="0,0,0,1" />
+                    <Setter Property="HeaderBorderThickness" Value="0,0,0,0" />
                     <Setter Property="TabItemBorderThickness" Value="0,0,0,0" />
                     <Setter Property="TabItemsBorderThicknessSelected" Value="0,0,0,0" />
                     <Setter Property="Margin" Value="0" />
                     <Setter Property="EnableMouseHoverBackground" Value="False" />
+                    <Setter Property="SplitterBackground" Value="{StaticResource ContentBackgroundAlt2}" />
+                    <Setter Property="HeaderBorderBrush" Value="{StaticResource ContentBackgroundAlt2}" />
+                    <Setter Property="TabItemsBorderBrush" Value="{StaticResource ContentBackgroundAlt2}" />
+
+                    <!--Setter Property="HeaderMouseOverBackground" Value="#313131" />
+                    <Setter Property="HeaderBackground" Value="#313131" />
+                    <Setter Property="SelectedHeaderBackground" Value="#313131" />
+                    <Setter Property="ElementBorderThickness" Value="0" /-->
+                        
                 </Style>
             </syncfusion:DockingManager.Style>
             <syncfusion:DockingManager.DocumentTabControlStyle>
                 <Style TargetType="{x:Type syncfusion:DocumentTabControl}" BasedOn="{StaticResource SyncfusionDocumentTabControlExtStyle}">
                     <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-                    <Setter Property="Background" Value="Transparent" />
-                    <Setter Property="TabItemSelectedBackground" Value="#373737" />
-                    <Setter Property="TabItemHoverBackground" Value="{StaticResource ContentBackgroundAlt3}" />
+                    <Setter Property="Background" Value="{StaticResource ContentBackgroundAlt}" />
+                    <Setter Property="TabItemSelectedBackground" Value="{StaticResource ContentBackgroundAlt2}" />
+                    <Setter Property="TabItemHoverBackground" Value="{StaticResource ContentBackgroundAlt4}" />
                     <Setter Property="TabItemHoverForeground" Value="#ffffff" />
                     <Setter Property="TabItemSelectedForeground" Value="#ffffff" />
-                    <Setter Property="TabPanelBackground" Value="{StaticResource ContentBackgroundAlt2}" />
-                    <Setter Property="BorderThickness" Value="0,1,0,0" />
-                    <Setter Property="TabItemSelectedBorderBrush" Value="#333333" />
+                    <Setter Property="TabPanelBackground" Value="{StaticResource ContentBackground}" />
+                    <Setter Property="BorderThickness" Value="0,0,0,0" />
+                    <Setter Property="TabItemSelectedBorderBrush" Value="{StaticResource ContentBackground}" />
                     <Setter Property="TabItemHoverBorderBrush" Value="#333333" />
                     <Setter Property="CloseButtonType" Value="Individual" />
+                    <Setter Property="BorderBrush" Value="{StaticResource ContentBackground}" />
+                    <Setter Property="Margin" Value="0" />
+
+
+                    <Setter Property="TabItemSelectedBackground" Value="#313131" />
+                    <Setter Property="TabPanelBackground" Value="{StaticResource ContentBackgroundAlt2}" />
                 </Style>
             </syncfusion:DockingManager.DocumentTabControlStyle>
             <syncfusion:DockingManager.DocumentTabItemStyle>
                 <Style TargetType="{x:Type tools_controls:TabItemExt}" BasedOn="{StaticResource SyncfusionDocumentTabItemExtStyle}">
                     <Setter Property="Background" Value="{StaticResource ContentBackgroundAlt2}" />
-                    <Setter Property="HoverBackground" Value="{StaticResource ContentBackgroundAlt3}" />
+                    <Setter Property="HoverBackground" Value="{StaticResource ContentBackgroundAlt4}" />
                     <Setter Property="Foreground" Value="#ffffff" />
+                    <Setter Property="BorderBrush" Value="{StaticResource ContentBackgroundAlt2}" />
+                    <Setter Property="BorderThickness" Value="0" />
                 </Style>
             </syncfusion:DockingManager.DocumentTabItemStyle>
-            <!--syncfusion:DockingManager.TabItemStyle>
+            <syncfusion:DockingManager.TabItemStyle>
                 <Style TargetType="{x:Type TabItem}" BasedOn="{StaticResource TabItemStyle}">
                     <Setter Property="Background" Value="{StaticResource ContentBackgroundAlt2}" />
                     <Setter Property="Foreground" Value="#ffffff" />
+
+                    <Setter Property="Background" Value="#313131" />
                 </Style>
-            </syncfusion:DockingManager.TabItemStyle-->
+            </syncfusion:DockingManager.TabItemStyle>
             <syncfusion:DockingManager.DockedElementTabbedHostStyle>
                 <Style TargetType="{x:Type tools_controls:DockedElementTabbedHost}" BasedOn="{StaticResource SyncfusionDockedElementTabbedHostStyle}">
                     <Setter Property="Margin" Value="0" />
                     <Setter Property="Padding" Value="0" />
+                    <Setter Property="BorderBrush" Value="{StaticResource WolvenKitRed}" />
                 </Style>
             </syncfusion:DockingManager.DockedElementTabbedHostStyle>
             <syncfusion:DockingManager.HeaderTemplate>
@@ -148,7 +168,7 @@
                             Visibility="Collapsed">
                             <TextBlock
                                 Grid.Column="1"
-                                Margin="2,0,5,1"
+                                Margin="1,0,5,1"
                                 Foreground="{StaticResource ContentForeground}"
                                 Text="{Binding}"
                                  />
