--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -84,15 +84,14 @@
     </UserControl.Resources>
 
     <!--  Grey Bar for the top -->
-    <Border
-            Margin="0,-33,0,0"
-            Padding="0,33,0,0"
-            BorderThickness="1,1,1,1"
+    <Border x:Name="TitlebarCoverer"
+            Margin="0,-32,0,0"
+            Padding="0,32,0,0"
+            BorderThickness="0,0,0,0"
             Background="{StaticResource ContentBackgroundAlt2}"
             BorderBrush="{StaticResource BorderAlt}"
             HorizontalAlignment="Stretch"
             VerticalAlignment="top"
-            Panel.ZIndex="0"
             MouseLeftButtonDown="Ribbon_MouseLeftButtonDown"
              >
         <Grid
@@ -484,7 +483,6 @@
             x:Name="ribbon"
             Grid.Row="0"
             Margin="0,0,0,0"
-            Panel.ZIndex="0"
             Visibility="Collapsed">
 
                 <!--  StartScreen  -->
