--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -167,7 +167,7 @@
 
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="1*" />
-                                        <RowDefinition Height="4*" />
+                                        <RowDefinition Height="3*" />
                                     </Grid.RowDefinitions>
                                     <Border Background="{StaticResource ContentBackgroundAlt}" Grid.RowSpan="2"/>
                                     <Border>
@@ -175,19 +175,31 @@
                                             <ImageBrush ImageSource="/Resources/Media/Images/Application/Sammy_Home.png" Stretch="Uniform"  />
                                         </Border.OpacityMask>
                                         <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="1*" />
+                                                <ColumnDefinition Width="4*" />
+                                                <ColumnDefinition Width="1*" />
+                                            </Grid.ColumnDefinitions>
+
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="1*" />
+                                                <RowDefinition Height="4*" />
+                                                <RowDefinition Height="1*" />
+                                            </Grid.RowDefinitions>
                                             <Image
+                                                Grid.Column="1"
+                                                Grid.Row="1"
                                                 x:Name="LogoNavi"
-                                                Width="140"
-                                                Height="140"
-                                                Margin="0"
-                                                HorizontalAlignment="Center"
-                                                VerticalAlignment="Center"
+                                                HorizontalAlignment="Stretch"
+                                                VerticalAlignment="Stretch"
                                                 Source="pack://application:,,,/Resources/Media/Images/Application/Sammy_Home.png" />
                                             <Button
-                                                Width="140"
-                                                Height="140"
-                                                HorizontalAlignment="Center"
-                                                VerticalAlignment="Center"
+                                                Grid.Column="1"
+                                                Grid.Row="1"
+                                                HorizontalAlignment="Stretch"
+                                                VerticalAlignment="Stretch"
+                                                Width="Auto"
+                                                Height="Auto"
                                                 Style="{DynamicResource HeaderButtonStyle}"
                                                 Opacity=".15"
                                                 Background="{DynamicResource TransparentWhiteBrush}"
