--- a/WolvenKit/Views/Documents/W2rcMainFileView.xaml
+++ b/WolvenKit/Views/Documents/W2rcMainFileView.xaml
@@ -19,7 +19,9 @@
     xmlns:archive="clr-namespace:WolvenKit.RED4.Archive.CR2W;assembly=WolvenKit.RED4.Archive"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}">
+    d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}"  BorderThickness="1,0,1,1"
+    BorderBrush="{StaticResource BorderAlt}"
+    Margin="0">
     
     <Grid>
 
@@ -423,6 +425,8 @@
             AllowEditing="False"
             Visibility="Visible"
             AllowDragging="True"
+            BorderThickness="0"
+            Margin="-1"
             ItemDragStarting="SfTreeView_ItemDragStarting"
             ItemDragOver="SfTreeView_ItemDragOver"
             ItemDropping="SfTreeView_ItemDropping"
@@ -447,7 +451,7 @@
                 ValueChanged="PropertyGrid_ValueChanged"
                 ButtonPanelVisibility="Collapsed"
                 SelectedObjectChanged="PropertyGrid_SelectedObjectChanged"
-                BorderThickness="0,1,1,1" />
+                BorderThickness="0" />
 
         <!--syncfusion:SfImageEditor
             Image="{Binding ImageStream}"
