--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -9,6 +9,7 @@
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:sp="clr-namespace:WolvenKit.Views.HomePage.Pages"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    xmlns:propertygrid="clr-namespace:Syncfusion.Windows.PropertyGrid;assembly=Syncfusion.PropertyGrid.WPF"
     xmlns:viewmodels="clr-namespace:WolvenKit.ViewModels">
    
     <Grid MinWidth="300" MinHeight="300">
@@ -21,39 +22,23 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <syncfusion:PropertyGrid
             x:Name="SettingsPropertygrid" Grid.Row="0"  Margin="0,85,0,0"
             AutoGeneratingPropertyGridItem="SettingsPropertygrid_OnAutoGeneratingPropertyGridItem"
-            CategoryForeground="{DynamicResource MahApps.Brushes.Accent}"
+            CategoryForeground="{StaticResource WolvenKitRed}"
             EnableGrouping="True"
             BorderThickness="0"
             SearchBoxVisibility="Collapsed"
             ButtonPanelVisibility="Collapsed"
-            PropertyNameColumnDefinition="200" />
-
-        <Grid Grid.Row="1" Background="{StaticResource ContentBackgroundAlt2}">
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-
-            <StackPanel Grid.Column="0" Margin="5" HorizontalAlignment="Right" Orientation="Horizontal" >
-                <Button x:Name="CheckForUpdatesButton" Content="Check for updates" />
-            </StackPanel>
-
-            <StackPanel Grid.Column="2" Margin="5" HorizontalAlignment="Right" Orientation="Horizontal" >
-                <TextBlock Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"
-                        Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
-                        Text="Theme changes will take affect after restart." />
-                <Button x:Name="ExitRestart" Click="ExitRestart_Click" Content="Exit and restart" />
-
-            </StackPanel>
-        </Grid>
+            PropertyNameColumnDefinition="200">
+            <!--syncfusion:PropertyGrid.Resources>
+                <Style TargetType="{x:Type propertygrid:PropertyViewItem}" BasedOn="{StaticResource SyncfusionPropertyViewItemStyle}">
+                    <Setter Property="IsCategoryEditorEnabled" Value="False" />
+                </Style>
+            </syncfusion:PropertyGrid.Resources-->
+        </syncfusion:PropertyGrid>
 
 
         <StackPanel
@@ -63,20 +48,14 @@
             VerticalAlignment="Top"
             Orientation="Horizontal"
             >
+            <StackPanel.Resources>
+                <Style TargetType="Button" BasedOn="{StaticResource ButtonDefault}">
+                    <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="Background" Value="{StaticResource ContentBackgroundAlt}" />
+                    <Setter Property="Padding" Value="15,0" />
+                </Style>
+            </StackPanel.Resources>
 
-            <TextBlock
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center "
-                FontSize="20"
-                Text="Settings"
-                />
-            <hc:Divider
-                Height="50"
-                Margin="15"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Orientation="Vertical"
-                />
             <hc:AnimationPath
                 Width="45"
                 Height="45"
@@ -97,6 +76,36 @@
                     </TransformGroup>
                 </hc:AnimationPath.RenderTransform>
             </hc:AnimationPath>
+            <hc:Divider
+                Height="50"
+                Margin="15"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Orientation="Vertical"
+                />
+            <TextBlock
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Text="Settings"
+                />
+
+            <Button x:Name="CheckForUpdatesButton" Margin="15" Height="40">
+                <TextBlock Text="Check for updates" FontSize="14"/>
+            </Button>
+            
+            <Button x:Name="SaveCloseButton" Margin="0" Height="40">
+                <TextBlock Text="Save &amp; Close" FontSize="14"/>
+            </Button>
+
+            <!--TextBlock Margin="15" HorizontalAlignment="Center" VerticalAlignment="Center"
+                        Foreground="{StaticResource WolvenKitRed}"
+                        Text="Theme changes will take affect after restart." /-->
+            
+            <!--Button x:Name="ExitRestart" Click="ExitRestart_Click" Margin="15" Height="40">
+                <TextBlock Text="Exit and restart" FontSize="14"/>
+            </Button-->
+
         </StackPanel>
 
     </Grid>
